Bug 895421 - Remove obsolete overlay scrollbar css in Windows toolkit theme. r=spohl
UltraBlame original commit: 4380a4e6c73a4eb80a2df0c666c81ca61d4e3883

--- a/toolkit/themes/windows/global/xulscrollbars.css
+++ b/toolkit/themes/windows/global/xulscrollbars.css
@@ -364,19 +364,6 @@ scrollbars
 )
 {
 scrollbar
-{
-position
-:
-relative
-;
-z
--
-index
-:
-2147483647
-;
-}
-scrollbar
 :
 not
 (
